fix: mobile items cut off in mobile menu

--- a/frontend/src/scss/layout/_typography.scss
+++ b/frontend/src/scss/layout/_typography.scss
@@ -157,6 +157,10 @@ h4,
 		text-transform: uppercase;
 		font-weight: $fw-bold;
 		font-family: $font-body;
+
+		@include breakpoint-inBetween(md, lg) {
+			padding-left: rem(5);
+		}
 	}
 }
 
